[tool.poetry]
name = "steam-bot"
version = "1.1.2"
description = ""
authors = ["Xephire"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
bs4 = "^0.0.1"
flask = "^1.1.2"
pandas = "^1.1.4"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
